--- a/index.css
+++ b/index.css
@@ -164,12 +164,12 @@ button {
 }
 
 /* Signup Button */
-#signup {
+#signup, #login {
   background: linear-gradient(90deg,  #ff9bd7,#ff02a2, #ff9bd7);
   color: #fff;
   box-shadow: 0 0 20px rgba(245, 93, 184, 0.4);
 }
-#signup:hover {
+#signup:hover, #login:hover {
   transform: scale(1.07);
   box-shadow: 2px 2px 25px rgba(104, 1, 70, 0.6);
 }
